Fixed modal window content overflow

--- a/src/styles/global/styles.less
+++ b/src/styles/global/styles.less
@@ -261,3 +261,10 @@ h6 {
     border-radius: 100%;
     .light-shadow;
 }
+
+/* Modals */
+
+.modal-boy {
+    max-height: 70vh;
+    overflow-y: scroll;
+}
